--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Compass Sorting exercise</title>
     <script src="https://cdn.jsdelivr.net/npm/phaser@3.15.1/dist/phaser-arcade-physics.min.js"></script>
     <script src="js/phaser.js"></script>
+    <script src="js/jquery-3.5.1.slim.min.js"></script>
     <style>canvas {width: 60%}</style>
 </head>
     <body>
